[package]
name = "rx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.10.3", features = ["fuzzy-select"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
